# adapt_med_seg

./: .gitignore  .gitmodules  README.md  blogpost.md  constants.py  dirty_cpy.py  inspector.py  methodology.md  preprocess.sh  pyproject.toml  run_notebook.job  setup.job
SegVol/: README.md  config.json  model_segvol_single.py  tokenizer.json  tokenizer_config.json  vocab.json
adapt_med_seg/: eval.py  main.py  train.py
jobs/: array_chaos_eval.txt  array_lora_400_ablations.txt  array_lora_prostate.txt  array_m3d_ablations.txt  array_m3d_eval.txt  array_m3d_lora_prostate.job  eval_context_priors.job  eval_context_priors_400.job  eval_context_priors_MRI_prostate.job  eval_context_priors_unbalanced.job  eval_lora.job  eval_lora_400.job  eval_lora_amosctmri.job  eval_lora_amosmri.job  eval_segvol_baseline.job  eval_segvol_baseline_400.job  eval_segvol_baseline_prostate.job  eval_segvol_baseline_with_orig_preprocess.job  eval_segvol_baseline_with_preprocess.job  eval_segvol_baseline_without_preprocess.job  preprocess.job  preprocess.sh  segvol_ablations.job  segvol_ct_inference.job  segvol_lora_inf_abl.job  setup.job  sevgol_lora_prostate.job  train_context_priors.job  train_context_priors_array.job  train_context_priors_array_.job  train_context_priors_unbalanced.job  train_lora_amos_ctmri.job  train_lora_amos_mri.job  train_lora_moe.job  train_lora_mri.job  train_lora_mri_all.job  train_lora_mri_brats.job
notebooks/: SegVol_initial_tryouts.ipynb  examples.ipynb  inference.ipynb  inference_colab.ipynb  preprocess.ipynb  process_results.ipynb  results_12.json  train.py  (+2 more)
(+72 files in other folders)
